--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
         "gulp": "~3.6.0",
         "gulp-util": "~2.2.14",
         "gulp-less": "~1.2.3",
-        "gulp-recess": "~0.3.1",
-        "vinyl-source-stream": "~0.1.1",
+        "vinyl-source-stream": "~0.1.1"
     },
     "browserify": {
         "transform": [
